Support persisting/applying the dynamic turms config #275

--- a/turms/src/main/resources/application-test.yaml
+++ b/turms/src/main/resources/application-test.yaml
@@ -9,4 +9,6 @@ logging:
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost/turms-test
+      uri: mongodb://localhost:29510/turms-test
+  profiles:
+    include: test-latest
