--- a/turms/src/main/resources/application-dev.yaml
+++ b/turms/src/main/resources/application-dev.yaml
@@ -15,6 +15,8 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:29510/turms-dev
+  profiles:
+    include: dev-latest
 turms:
   ip:
     use-local-ip: true
