Code optimization for turms-plugin-minio: Use a configuration class "MinioProperties" to manage the properties for MinIO

--- a/turms/src/main/resources/application-dev.yaml
+++ b/turms/src/main/resources/application-dev.yaml
@@ -20,7 +20,7 @@ spring:
 turms:
   ip:
     use-local-ip: true
-  storage:
-    minio:
-      retry:
-        enabled: false
+turms-plugin:
+  minio:
+    retry:
+      enabled: false
