Polish the code for mocking data

--- a/turms/src/main/resources/application.yaml
+++ b/turms/src/main/resources/application.yaml
@@ -58,3 +58,6 @@ logging:
     name: ../logs/turms.log
   pattern:
     dateformat: yyyy-MM-dd HH:mm:ss.SSS,UTC
+turms-plugin:
+#  mock:
+#    enabled: true
