--- a/turms-client-java/pom.xml
+++ b/turms-client-java/pom.xml
@@ -20,8 +20,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <!-- Always use JDK 8 to avoid pitfalls on Android -->
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -31,6 +32,12 @@
             <groupId>im.turms</groupId>
             <artifactId>common</artifactId>
             <version>0.9.0</version>
+        </dependency>
+        <!-- Use OkHttp instead of the WebSocket of JDK(+11) to work on Android -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.7.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -42,6 +49,7 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
